[gd_scene load_steps=2 format=2]

[ext_resource path="res://SignUp.gd" type="Script" id=1]

[node name="SignUp" type="Node2D"]
script = ExtResource( 1 )

[node name="Username" type="Label" parent="."]
margin_left = 84.0
margin_top = 40.0
margin_right = 216.0
margin_bottom = 70.0
text = "USERnAME"

[node name="LE_Username" type="LineEdit" parent="Username"]
margin_left = -53.0
margin_top = 39.0
margin_right = 171.0
margin_bottom = 80.0

[node name="Passowrd" type="Label" parent="."]
margin_left = 351.0
margin_top = 38.0
margin_right = 483.0
margin_bottom = 68.0
text = "Password"

[node name="LE_Password" type="LineEdit" parent="Passowrd"]
margin_left = -53.0
margin_top = 39.0
margin_right = 171.0
margin_bottom = 80.0

[node name="Confirm" type="Button" parent="."]
margin_left = 50.0
margin_top = 155.0
margin_right = 216.0
margin_bottom = 193.0
text = "Envoyer"

[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
